--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "autoprefixer": "^10.4.8",
         "esbuild": "^0.14.47",
+        "postcss": "^8.4.16",
         "tailwindcss": "^3.1.8"
     },
     "dependencies": {
