--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@storybook/testing-library": "^0.0.13",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "classnames": "^2.3.1",
     "esbuild": "^0.14.47",
     "postcss": "^8.4.16",
+    "prop-types": "^15.8.1",
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
