add unit test CI

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "movies-db",
+  "name": "timeresth",
   "version": "1.0.0",
   "description": "A simple timer to workout with an HIIT program",
   "main": "index.js",
