--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
     "@types/jest": "^28.1.7",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
-    "classnames": "^2.3.1",
     "esbuild": "^0.14.47",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "postcss": "^8.4.16",
-    "prop-types": "^15.8.1",
-    "tailwindcss": "^3.1.8"
+    "postcss": "^8.4.16"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10"
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.1.8"
   }
 }
