--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^28.1.7",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
