--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "timeresth",
-  "version": "1.0.0",
-  "description": "A simple timer to workout with an HIIT program",
-  "main": "index.js",
-  "scripts": {
-    "dev": "NODE_ENV=development node esbuild.js",
-    "test": "NODE_ENV=test jest --no-cache",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.18.10",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/builder-webpack4": "^6.5.10",
-    "@storybook/manager-webpack4": "^6.5.10",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^28.1.7",
-    "autoprefixer": "^10.4.8",
-    "babel-loader": "^8.2.5",
-    "esbuild": "^0.14.47",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "postcss": "^8.4.16"
-  },
-  "dependencies": {
-    "classnames": "^2.3.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-feather": "^2.0.10",
-    "react-router-dom": "^6.3.0",
-    "tailwindcss": "^3.1.8"
-  }
+    "name": "timeresth",
+    "version": "1.0.0",
+    "description": "A simple timer to workout with an HIIT program",
+    "main": "index.js",
+    "scripts": {
+        "dev": "NODE_ENV=development node esbuild.js",
+        "test": "NODE_ENV=test jest --no-cache",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook",
+        "prettier": "prettier --write ./src",
+        "prepare": "husky install"
+    },
+    "author": "",
+    "license": "MIT",
+    "devDependencies": {
+        "@babel/core": "^7.18.10",
+        "@storybook/addon-actions": "^6.5.10",
+        "@storybook/addon-essentials": "^6.5.10",
+        "@storybook/addon-interactions": "^6.5.10",
+        "@storybook/addon-links": "^6.5.10",
+        "@storybook/addon-postcss": "^2.0.0",
+        "@storybook/builder-webpack4": "^6.5.10",
+        "@storybook/manager-webpack4": "^6.5.10",
+        "@storybook/react": "^6.5.10",
+        "@storybook/testing-library": "^0.0.13",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^28.1.7",
+        "autoprefixer": "^10.4.8",
+        "babel-loader": "^8.2.5",
+        "esbuild": "^0.14.47",
+        "husky": "^8.0.0",
+        "jest": "^28.1.3",
+        "jest-environment-jsdom": "^28.1.3",
+        "postcss": "^8.4.16",
+        "prettier": "^2.7.1",
+        "pretty-quick": "^3.1.3"
+    },
+    "dependencies": {
+        "classnames": "^2.3.1",
+        "prop-types": "^15.8.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-feather": "^2.0.10",
+        "react-router-dom": "^6.3.0",
+        "tailwindcss": "^3.1.8"
+    }
 }
