--- a/package.json
+++ b/package.json
@@ -29,23 +29,25 @@
         "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^28.1.7",
         "autoprefixer": "^10.4.8",
-        "babel-loader": "^8.2.5",
-        "esbuild": "^0.14.47",
+        "esbuild": "0.15.10",
         "husky": "^8.0.0",
         "jest": "^28.1.3",
         "jest-environment-jsdom": "^28.1.3",
         "postcss": "^8.4.16",
+        "postcss-import": "^15.0.0",
         "prettier": "^2.7.1",
         "pretty-quick": "^3.1.3"
     },
     "dependencies": {
         "classnames": "^2.3.1",
+        "immer": "^9.0.15",
         "prettier-plugin-tailwindcss": "^0.1.13",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-feather": "^2.0.10",
         "react-router-dom": "^6.3.0",
+        "swiper": "^8.4.2",
         "tailwindcss": "^3.1.8"
     }
 }
