--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "main": "index.js",
     "scripts": {
         "dev": "NODE_ENV=development node esbuild.js",
-        "test": "NODE_ENV=test jest --no-cache",
+        "test-watch": "NODE_ENV=test vitest",
+        "test": "NODE_ENV=test vitest run --coverage",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
         "prettier": "prettier --write ./src",
         "prepare": "husky install"
     },
-    "author": "",
+    "author": "Giovanni Rodighiero",
     "license": "MIT",
     "devDependencies": {
         "@babel/core": "^7.18.10",
@@ -28,15 +29,16 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^14.4.3",
         "@types/jest": "^28.1.7",
+        "@vitest/coverage-c8": "^0.24.4",
         "autoprefixer": "^10.4.8",
         "esbuild": "0.15.10",
         "husky": "^8.0.0",
-        "jest": "^28.1.3",
-        "jest-environment-jsdom": "^28.1.3",
+        "jsdom": "^20.0.2",
         "postcss": "^8.4.16",
         "postcss-import": "^15.0.0",
         "prettier": "^2.7.1",
-        "pretty-quick": "^3.1.3"
+        "pretty-quick": "^3.1.3",
+        "vitest": "^0.24.4"
     },
     "dependencies": {
         "classnames": "^2.3.1",
