--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "NODE_ENV=development node esbuild.js",
+        "types-checking": "tsc",
         "test-watch": "NODE_ENV=test vitest",
         "test": "NODE_ENV=test vitest run --coverage",
         "storybook": "start-storybook -p 6006",
@@ -28,7 +29,6 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^28.1.7",
         "@vitest/coverage-c8": "^0.24.4",
         "autoprefixer": "^10.4.8",
         "esbuild": "0.15.10",
@@ -38,6 +38,7 @@
         "postcss-import": "^15.0.0",
         "prettier": "^2.7.1",
         "pretty-quick": "^3.1.3",
+        "typescript": "^4.8.4",
         "vitest": "^0.24.4"
     },
     "dependencies": {
