--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "classnames": "^2.3.1",
         "immer": "^9.0.15",
         "react": "^18.2.0",
+        "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
         "react-feather": "^2.0.10",
         "react-router-dom": "^6.3.0",
