--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "vitest": "^0.24.4"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.1.1",
         "classnames": "^2.3.1",
         "immer": "^9.0.15",
         "prettier-plugin-tailwindcss": "^0.1.13",
