--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
         "prepare": "husky install"
     },
     "lint-staged": {
-        "src/**/*": ["prettier --write"],
-        "src/**/*.ts?(x)": ["tsc-files --noEmit"]
+        "src/**/*": [
+            "prettier --write"
+        ],
+        "src/**/*.ts?(x)": [
+            "tsc-files --noEmit"
+        ]
     },
     "author": "Giovanni Rodighiero",
     "license": "MIT",
@@ -43,10 +47,12 @@
         "postcss-import": "^15.0.0",
         "prettier": "^2.7.1",
         "pretty-quick": "^3.1.3",
+        "tsc-files": "^1.1.3",
         "typescript": "^4.8.4",
         "vitest": "^0.24.4"
     },
     "dependencies": {
+        "@supabase/auth-ui-react": "^0.2.6",
         "@supabase/supabase-js": "^2.1.1",
         "classnames": "^2.3.1",
         "immer": "^9.0.15",
