--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "types": ["vitest/globals"],
+        "types": ["vitest/globals", "@testing-library/jest-dom"],
         "jsx": "react-jsx",
         "esModuleInterop": true,
         "checkJs": true,
