--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "NODE_ENV=development node esbuild.js",
+        "build": "NODE_ENV=production node esbuild.js",
         "types-checking": "tsc",
         "test-watch": "NODE_ENV=test vitest",
         "test": "NODE_ENV=test vitest run --coverage",
