CI: update actions

--- a/.github/workflows/staging-deploy.yml
+++ b/.github/workflows/staging-deploy.yml
@@ -1,16 +1,19 @@
 # This is a basic workflow to help you get started with Actions
 
-name: STAGING DEPLOY
+name: STAGING_DEPLOY
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches: [ develop ]
+  workflow_run:
+    workflows: [BASE_CHECKS]
+    types: [completed]
+    branches: [develop]
     
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
