--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
         "@testing-library/user-event": "^14.4.3",
         "@vitest/coverage-c8": "^0.24.4",
         "autoprefixer": "^10.4.8",
+        "cssnano": "^6.0.1",
+        "ejs": "^3.1.9",
         "esbuild": "0.15.10",
         "husky": "^8.0.0",
         "jsdom": "^20.0.2",
         "lint-staged": "^13.1.0",
-        "postcss": "^8.4.16",
+        "postcss": "^8.4.27",
         "postcss-import": "^15.0.0",
         "prettier": "^2.7.1",
         "prettier-plugin-tailwindcss": "^0.1.13",
